<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

<group android:checkableBehavior="single">

    <item android:title="@string/main_actions">
        <menu>
            <item
                android:id="@+id/nav_add"
                android:icon="@drawable/ic_menu_add"
                android:title="@string/add" />
            <item
                android:id="@+id/nav_update"
                android:icon="@drawable/ic_menu_update"
                android:title="@string/update" />
            <item
                android:id="@+id/nav_delete"
                android:icon="@drawable/ic_menu_delete"
                android:title="@string/delete" />
            <item
                android:id="@+id/nav_records"
                android:icon="@drawable/ic_menu_records"
                android:title="@string/records" />
        </menu>
    </item>

    <item android:title="@string/extras">
        <menu>
            <item
                android:id="@+id/nav_calculator"
                android:icon="@drawable/ic_menu_calculator"
                android:title="@string/calculator" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/about" />
        </menu>
    </item>

</group>

</menu>