<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_add">

    <fragment
        android:id="@+id/nav_add"
        android:name="com.example.agrix.ui.AddFragment"
        android:label="@string/add_product"
        tools:layout="@layout/fragment_add" />
    <fragment
        android:id="@+id/nav_update"
        android:name="com.example.agrix.ui.UpdateFragment"
        android:label="@string/update_product"
        tools:layout="@layout/fragment_update" />
    <fragment
        android:id="@+id/nav_delete"
        android:name="com.example.agrix.ui.DeleteFragment"
        android:label="@string/delete_product"
        tools:layout="@layout/fragment_delete" />
    <fragment
        android:id="@+id/nav_records"
        android:name="com.example.agrix.ui.RecordsFragment"
        android:label="@string/product_records"
        tools:layout="@layout/fragment_records" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.agrix.ui.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_calculator"
        android:name="com.example.agrix.ui.CalculatorFragment"
        android:label="@string/calculator"
        tools:layout="@layout/fragment_calculator" />
</navigation>